trunk/Archive2/5d/10ead0bb2f120c/output
main.cpp: In function 'int main()':
main.cpp:25:16: error: 'Blah::InnerClass Blah::Inner' is private
     InnerClass Inner;
                ^
main.cpp:37:10: error: within this context
     Blah.Inner.A = 1;
          ^
